--- a/metadata.yaml
+++ b/metadata.yaml
@@ -41,5 +41,6 @@ subjects:
 - !lcsh 'United States -- History -- Colonial period, ca. 1600-1775 -- Fiction'
 - !lcc 'PS'
 - !lcsh 'New York (N.Y.) -- Fiction'
+- GITenberg
 title: Barbara Ladd
 url: http://www.gutenberg.org/ebooks/34270
